--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section>
             <div>
-                <img id="seccionUno" src="" alt="ImageSection" class="imagenes">
+                <img id="seccionuno" src="" alt="ImageSection" class="imagenes">
             </div>
         </section>
 
